Steel Bar, Steel Beam, New and Updated Recipes

--- a/src/main/resources/assets/gep/lang/en_us.lang
+++ b/src/main/resources/assets/gep/lang/en_us.lang
@@ -32,6 +32,8 @@ item.gep:turn_right.name=Turn Right
 item.gep:rubber.name=Rubber
 item.gep:steel_ingot.name=Steel Ingot
 item.gep:steel_plate.name=Steel Plate
+item.gep:steel_bar.name=Steel Bar
+item.gep:steel_beam.name=Steel Beam
 item.gep:automatic_transmission.name=Automatic Transmission
 item.gep:transmission.name=Transmission
 item.gep:license_plate_12x3_generic.name=12x3 License Plate
@@ -62,3 +64,4 @@ gep.recipes.materials=GEP Materials
 gep.recipes.rails=30px Rails
 gep.recipes.clothes=GEP Clothes
 gep.recipes.car_parts=GEP Car Parts
+gep.recipes.misc=GEP Misc Recipes
