--- a/src/main/resources/assets/gep/lang/en_us.lang
+++ b/src/main/resources/assets/gep/lang/en_us.lang
@@ -40,13 +40,14 @@ item.gep:license_plate_12x3_generic.name=12x3 License Plate
 item.gep:license_plate_holder_12x3.name=12x3 License Plate Holder
 item.gep:cap.name=GEP Cap
 
-# Blocks
+# Blocks / Multiblocks
 tile.gep:pizza_oven.name=FRSM Pizza Oven
 tile.gep:pizza_oven2.name=FRSM Pizza Oven
 tile.gep:mailbox5.name=Mailbox
 tile.gep:smeltery.name=Smeltery
-tile.gep:smeltery_body.name=Smeltery (Body)
-tile.gep:smeltery_tank.name=Smeltery (Tank)
+tile.gep:smeltery_core.name=Smeltery (Core)
+tile.gep:multi_sub.name=Generic Sub Block
+tile.gep:multi_sub_entity.name=Generic Sub Block (w/Entity)
 tile.gep:crusher.name=Crusher
 tile.gep:crusher_body.name=Crusher (Body)
 tile.gep:signal_30.name=Signal 30 (Pole)
