--- a/assets/gep/lang/en_us.lang
+++ b/assets/gep/lang/en_us.lang
@@ -39,6 +39,7 @@ item.gep:transmission.name=Transmission
 item.gep:license_plate_12x3_generic.name=12x3 License Plate
 item.gep:license_plate_holder_12x3.name=12x3 License Plate Holder
 item.gep:cap.name=GEP Cap
+item.gep:impact.name=Impact Wrench
 
 # Blocks
 tile.gep:pizza_oven.name=FRSM Pizza Oven
