Added Second Impact Wrench

--- a/assets/gep/lang/en_us.lang
+++ b/assets/gep/lang/en_us.lang
@@ -39,7 +39,8 @@ item.gep:transmission.name=Transmission
 item.gep:license_plate_12x3_generic.name=12x3 License Plate
 item.gep:license_plate_holder_12x3.name=12x3 License Plate Holder
 item.gep:cap.name=GEP Cap
-item.gep:impact.name=Impact Wrench
+item.gep:impact_0.name=Generic Impact Wrench
+item.gep:impact_1.name=Generic Impact Wrench
 
 # Blocks
 tile.gep:pizza_oven.name=FRSM Pizza Oven
