--- a/assets/gep/lang/en_us.json
+++ b/assets/gep/lang/en_us.json
@@ -51,14 +51,11 @@
     "item.gep.crusher": "Crusher", 
     "item.gep.rolling_mill": "Rolling Mill", 
     "item.gep.oilpump": "Oil Pump", 
-    "gep.recipes.machines": "GEP Machines/Blocks", 
-    "gep.recipes.materials": "GEP Materials", 
-    "gep.recipes.containers": "GEP Containers/Barrels", 
-    "gep.recipes.rails": "30px Rails", 
-    "gep.recipes.clothes": "GEP Clothes", 
-    "gep.recipes.car_parts": "GEP Car Parts", 
-    "gep.recipes.misc": "GEP Misc Recipes", 
-    "#info": "File generated via FMT.", 
+    "recipe.gep.general": "GEP General Recipes",
+    "recipe.gep.chassis": "GEP Vehicle Chassis",
+    "recipe.gep.components": "GEP Vehicle Components",
+    "recipe.gep.parts": "GEP Vehicle Parts",
+    "//0": "//",
     "item.gep.chassis_car": "Generic Car Chassis",
     "item.gep.chassis_autobus": "Generic Autobus Chassis",
     "item.gep.chassis_truck": "Generic Truck Chassis",
