--- a/assets/gep/lang/en_us.json
+++ b/assets/gep/lang/en_us.json
@@ -1,16 +1,16 @@
 { 
     "itemGroup.fvtm:gep": "General Essentials Pack", 
-    "item.gep.engine_diesel": "Diesel General Purpose Engine", 
-    "item.gep.engine_petrol": "Petrol General Purpose Engine", 
-    "item.gep.fuel_tank": "General Purpose Fuel Tank", 
-    "item.gep.glue": "General Purpose Glue", 
-    "item.gep.key": "GEP Vehicle Key", 
-    "item.gep.diesel": "Diesel (GAS)", 
-    "item.gep.super95": " Super 95 (Petrol)", 
-    "item.gep.super98": " Super 98 (Petrol)", 
-    "item.gep.diesel_canister": "Diesel Canister", 
-    "item.gep.petrol_canister": "Petrol Canister", 
-    "item.gep.cola": "Cola", 
+    "item.gep.engine_diesel": "Generic Diesel Engine", 
+    "item.gep.engine_petrol": "Generic Petrol Engine", 
+    "item.gep.fuel_tank": "Generic Fuel Tank", 
+    "item.gep.glue": "Generic Testing Glue", 
+    "item.gep.key": "Generic Car Key", 
+    "item.gep.diesel": "Standard Diesel", 
+    "item.gep.super95": "Standard Super 95", 
+    "item.gep.super98": "Standard Super 98", 
+    "item.gep.diesel_canister": "GEP Diesel Canister", 
+    "item.gep.petrol_canister": "GEP Petrol Canister", 
+    "item.gep.cola": "Test Cola :tm:", 
     "item.gep.mailbox5": "Mailbox (5)", 
     "item.gep.pizza_oven": "FRSM Pizza Oven", 
     "item.gep.pizza_oven2": "FRSM Pizza Oven", 
@@ -24,11 +24,11 @@
     "item.gep.steel_plate": "Steel Plate", 
     "item.gep.steel_bar": "Steel Bar", 
     "item.gep.steel_beam": "Steel Beam", 
-    "item.gep.automatic_transmission": "Automatic Transmission", 
-    "item.gep.transmission": "Transmission", 
-    "item.gep.license_plate_12x3_generic": "12x3 License Plate", 
-    "item.gep.license_plate_holder_12x3": "12x3 License Plate Holder", 
-    "item.gep.cap": "GEP Cap", 
+    "item.gep.automatic_transmission": "Generic Automatic Transmission", 
+    "item.gep.transmission": "Generic Transmission", 
+    "item.gep.license_plate_12x3_generic": "Generic License Plate (12x3)", 
+    "item.gep.license_plate_holder_12x3": "License Plate Holder (12x3)", 
+    "item.gep.cap": "Generic Brown Cap", 
     "item.gep.impact_0": "Generic Impact Wrench", 
     "item.gep.impact_1": "Generic Impact Wrench", 
     "tile.gep:pizza_oven.name": "FRSM Pizza Oven", 
@@ -51,18 +51,19 @@
     "item.gep.crusher": "Crusher", 
     "item.gep.rolling_mill": "Rolling Mill", 
     "item.gep.oilpump": "Oil Pump", 
-    "recipe.gep.general": "GEP General Recipes",
-    "recipe.gep.chassis": "GEP Vehicle Chassis",
-    "recipe.gep.components": "GEP Vehicle Components",
-    "recipe.gep.parts": "GEP Vehicle Parts",
-    "recipe.gep.materials": "GEP Materials/Containers",
-    "//0": "//",
-    "item.gep.chassis_car": "Generic Car Chassis",
-    "item.gep.chassis_autobus": "Generic Autobus Chassis",
-    "item.gep.chassis_truck": "Generic Truck Chassis",
-    "item.gep.door_set": "Door Assembly Set",
+    "recipe.gep.general": "GEP General Recipes", 
+    "recipe.gep.chassis": "GEP Vehicle Chassis", 
+    "recipe.gep.components": "GEP Vehicle Components", 
+    "recipe.gep.parts": "GEP Vehicle Parts", 
+    "recipe.gep.materials": "GEP Materials/Containers", 
+    "item.gep.chassis_car": "CarChassis", 
+    "item.gep.chassis_autobus": "Autobus Chassis", 
+    "item.gep.chassis_truck": "TruckChassis", 
+    "item.gep.door_set": "DoorSet", 
     "item.gep.chassis_components": "Chassis Components", 
-    "item.gep.lights_set": "Lights Assembly Set",
-    "item.gep.electric_components": "Electronic Components",
-    "item.gep.seat_set": "Seat Assembly Set"
+    "item.gep.lights_set": "Lights Set", 
+    "item.gep.electric_components": "ElectronicComponents", 
+    "item.gep.seat_set": "SeatSet", 
+    "//0": "//", 
+    "item.gep.default": "Default 30px Gauge"
 }
