--- a/assets/gep/lang/en_us.lang
+++ b/assets/gep/lang/en_us.lang
@@ -6,17 +6,17 @@
 # Other
 itemGroup.fvtm:gep=General Essentials Pack
 # Items (/Parts)
-item.gep:engine_diesel.name=Diesel General Purpose Engine
-item.gep:engine_petrol.name=Petrol General Purpose Engine
-item.gep:fuel_tank.name=General Purpose Fuel Tank
-item.gep:glue.name=General Purpose Glue
-item.gep:key.name=GEP Vehicle Key
-item.gep:diesel.name=Diesel (GAS)
-item.gep:super95.name= Super 95 (Petrol)
-item.gep:super98.name= Super 98 (Petrol)
-item.gep:diesel_canister.name=Diesel Canister
-item.gep:petrol_canister.name=Petrol Canister
-item.gep:cola.name=Cola
+item.gep:engine_diesel.name=Generic Diesel Engine
+item.gep:engine_petrol.name=Generic Petrol Engine
+item.gep:fuel_tank.name=Generic Fuel Tank
+item.gep:glue.name=Generic Testing Glue
+item.gep:key.name=Generic Car Key
+item.gep:diesel.name=Standard Diesel
+item.gep:super95.name=Standard Super 95
+item.gep:super98.name=Standard Super 98
+item.gep:diesel_canister.name=GEP Diesel Canister
+item.gep:petrol_canister.name=GEP Petrol Canister
+item.gep:cola.name=Test Cola :tm:
 item.gep:mailbox5.name=Mailbox (5)
 item.gep:pizza_oven.name=FRSM Pizza Oven
 item.gep:pizza_oven2.name=FRSM Pizza Oven
@@ -30,11 +30,11 @@ item.gep:steel_ingot.name=Steel Ingot
 item.gep:steel_plate.name=Steel Plate
 item.gep:steel_bar.name=Steel Bar
 item.gep:steel_beam.name=Steel Beam
-item.gep:automatic_transmission.name=Automatic Transmission
-item.gep:transmission.name=Transmission
-item.gep:license_plate_12x3_generic.name=12x3 License Plate
-item.gep:license_plate_holder_12x3.name=12x3 License Plate Holder
-item.gep:cap.name=GEP Cap
+item.gep:automatic_transmission.name=Generic Automatic Transmission
+item.gep:transmission.name=Generic Transmission
+item.gep:license_plate_12x3_generic.name=Generic License Plate (12x3)
+item.gep:license_plate_holder_12x3.name=License Plate Holder (12x3)
+item.gep:cap.name=Generic Brown Cap
 item.gep:impact_0.name=Generic Impact Wrench
 item.gep:impact_1.name=Generic Impact Wrench
 # Blocks
@@ -66,11 +66,13 @@ recipe.gep.components=GEP Vehicle Components
 recipe.gep.parts=GEP Vehicle Parts
 recipe.gep.materials=GEP Materials/Containers
 //
-item.gep:chassis_car.name=Generic Car Chassis
-item.gep:chassis_autobus.name=Generic Autobus Chassis
-item.gep:chassis_truck.name=Generic Semi-Truck Chassis
-item.gep:door_set.name=Door Assembly Set
+item.gep:chassis_car.name=CarChassis
+item.gep:chassis_autobus.name=Autobus Chassis
+item.gep:chassis_truck.name=TruckChassis
+item.gep:door_set.name=DoorSet
 item.gep:chassis_components.name=Chassis Components
-item.gep:lights_set.name=Lights Assembly Set
-item.gep:electric_components.name=Electronic Components
-item.gep:seat_set.name=Seat Assembly Set
+item.gep:lights_set.name=Lights Set
+item.gep:electric_components.name=ElectronicComponents
+item.gep:seat_set.name=SeatSet
+//0=//
+item.gep:default.name=Default 30px Gauge
