--- a/assets/gep/lang/en_us.lang
+++ b/assets/gep/lang/en_us.lang
@@ -77,3 +77,4 @@ item.gep:electric_components.name=ElectronicComponents
 item.gep:seat_set.name=SeatSet
 //0=//
 item.gep:standard.name=30px Standard Gauge
+item.gep:jack_stand.name=Unnamed Content
